Fix overflow-x and add animation to navbar

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,6 @@
 html,
 body {
   font-family: 'Quicksand';
-  overflow-x: hidden;
 }
 
 /* view content center */
